fixed text align

--- a/src/pages/Instructions/Instructions.css
+++ b/src/pages/Instructions/Instructions.css
@@ -9,6 +9,7 @@
   font-size: 0.8rem;
   text-align: justify;
   overflow-y: auto;
+  text-align: left;
 }
 
 .instructions h1,
